--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charSet="utf-8" />
-    <title>[marban.]</title>
+    <title>[Gowtham.]</title>
     <link rel="icon" href="/smiley.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
